------------
v3.0.0alpha4
------------




------------
v3.0.0alpha3
------------

|+

------------
v3.0.0alpha2
------------

|+

------------
v3.0.0alpha1
------------


------
v2.2.6
------

[jan] SECURITY: Fix XSS vulnerability with pathinfo component in toString().


------
v2.2.5
------

[jan] Mark PHP 7 as supported.


------
v2.2.4
------

[jan] Improve PSR-2 compatibility.


------
v2.2.3
------

[mms] Catch/ignore invalid RFC 2397 data strings.


------
v2.2.2
------

[mms] Optimize Horde_Url#toString().


------
v2.2.1
------

[mms] Use strpos() instead of preg_match() for simple string searches (Thomas
      Jarosch <thomas.jarosch@intra2net.com>, Request #12603).


------
v2.2.0
------

[mms] Add Horde_Url_Data::isData().


------
v2.1.0
------

[mms] Add Horde_Url_Data class.


------
v2.0.1
------

[mms] Use new Horde_Test layout.


------
v2.0.0
------

First stable release for Horde 5.


---------
v2.0.0RC1
---------

[mms] Fix copying all parameters when cloning a Horde_Url object in the
      constructor.


-----------
v2.0.0beta3
-----------

[mms] Make parameter generation extendable.


-----------
v2.0.0beta2
-----------

[mms] Add Horde_Url::setScheme().


-----------
v2.0.0beta1
-----------

First beta release for Horde 5.
[jan] Make constructor parameters optional for empty URLs.


------------
v2.0.0alpha1
------------

First alpha release for Horde 5.


------
v1.0.2
------

[mms] Don't encode anchor string if raw mode is enabled.


------
v1.0.1
------

[rla] Add license file.


------
v1.0.0
------

First stable release for Horde 4.


---------
v1.0.0RC2
---------

Second release candidate for Horde 4.


---------
v1.0.0RC1
---------

First release candidate for Horde 4.


-----------
v1.0.0beta1
-----------

First beta release for Horde 4.


------------
v1.0.0alpha1
------------

First alpha release for Horde 4.
Add ability to return relative URL when converting to string.
Add Horde_Url_Exception::.
Add Horde_Url::redirect().